@@ -1,3 +1,7 @@
+2002-09-26  D. Richard Hipp  <drh@hwaci.com>
+
+	* tkchat.tcl: Added the "Alerts" menu and its associated functionality.
+
 2002-08-13  Reinhard Max  <max@suse.de>
 
 	* tkchat.tcl: Added support for starkits (stevel).
